Updated interface, added new features to back end, 90 percent ready for SB Hacks expo

--- a/views/discover.pug
+++ b/views/discover.pug
@@ -5,8 +5,9 @@ block content
 
   div(id='app')
     div(id='discoverMap')
-    div(Class='container')
-      div(id='snaps')
-        snap-item(v-for='item in snaps' v-bind:snap='item')
+    // div(Class='container')
+    //   div(id='snaps')
+    //     snap-item(v-for='item in snaps' v-bind:snap='item') -->
 
     include includes/newSnapModal.pug
+    include includes/viewSnapModal.pug
