--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,35 @@
+/* Bootstrap Overrides */
+.navbar-form .input-group {
+  width: 500px !important;
+}
+
+.btn-primary {
+  background-color: #ee693f;
+  border-color: #dc572f;
+}
+
+.btn-primary:hover, .btn-primary:active, .btn-primary:focus {
+  background-color: #dc572f !important;
+  border-color: #dc572f !important;
+}
+
+.navbar-default {
+  background: #ffffff;
+  box-shadow: 0px 3px 10px rgba(0,0,0,0.5);
+}
+
+a.navbar-brand {
+  font-family: 'Fredoka One', cursive;
+  font-size: 1.6em;
+  padding-bottom: 8px;
+}
+
+a.navbar-brand img {
+  display: inline;
+  margin-right: 15px;
+}
+
+/* Custom CSS */
 #newSnapMap {
   height: 350px;
   width: 100%;
@@ -5,8 +37,47 @@
 
 #discoverMap {
   width: 100%;
-  height: 100%;
   top: 50px;
   left: 0;
+  bottom: 0px;
   position: fixed !important;
+  z-index: 999;
+
+  transition: 0.5s all;
+  -webkit-transition: 0.5s all;
+  -moz-transition: 0.5s all;
+  -o-transition: 0.5s all;
+}
+
+.details-active {
+  width: 70% !important;
+}
+
+.img-preview {
+  text-align: center;
+  width: 100%;
+  max-width: 300px !important;
+  margin: 0 auto;
+}
+
+.snapView img {
+  margin-bottom: 10px;
+}
+
+.snapView p {
+  font-size: 1.15em;
+  margin-top: 0.5em;
+}
+
+.like {
+  margin-right: 8px;
+}
+
+.logo {
+  margin-top: -10px;
+  transition: 0.5s all;
+}
+
+.logo:hover {
+  -webkit-transform: rotate(180deg);
 }
