--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,12 +3,13 @@ html
   head
     title= title
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans')
     link(rel='stylesheet', href='/css/style.css')
 
     script(src='https://code.jquery.com/jquery-3.1.1.min.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
     script(src='https://unpkg.com/vue/dist/vue.js')
-    script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBExziCIK9QOh0W8Bq1nhCaANzFlLJx0T0')
+    script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBExziCIK9QOh0W8Bq1nhCaANzFlLJx0T0&libraries=places')
   body
     block content
 
