--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,9 @@ doctype html
 html
   head
     title= title
+
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Fredoka+One|Open+Sans')
     link(rel='stylesheet', href='/css/style.css')
